# prototype-qml-cmake

./: CMakeLists.txt  qtquickapp.desktop  qtquickapp.pro  qtquickapp_harmattan.desktop
client/: CMakeLists.txt  ClientConnection.cpp  ConcurrentQueue.h  IService.h  QtService.cpp  QtService.h  ResourceRepository.h  Service.cpp  Service.h  ServiceFsmBackend.h  main.cpp  qmlapplicationviewer.cpp
client/connection/: CMakeLists.txt
client/core/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConcurrentQueue.h  Dispatcher.cpp  Dispatcher.h  IService.h  InventoryCore.cpp  InventoryCore.h  QtService.cpp  QtService.h  QtServiceFsm.h  ResourceRepository.cpp  ResourceRepository.h  Service.cpp  Service.h
client/core/events/: DrawBufferReleased.h  DrawBufferRequest.h  DrawBufferResponse.h  Event.h  EventRegistry.h  GuiResourceRequest.cpp  GuiResourceRequest.h  GuiResourceResponse.h  NetworkMessageRequest.cpp  NetworkMessageRequest.h  NetworkMessageResponse.cpp  NetworkMessageResponse.h  NetworkRequest.cpp  NetworkRequest.h  OpenInterfaceWindowRequest.h  QmlRequest.cpp  QmlRequest.h
client/core/network/: CMakeLists.txt  ServerConnection.cpp  ServerConnection.h  ServerConnectionListener.h
client/events/: CMakeLists.txt  DrawBufferReleased.h  DrawBufferRequest.h  DrawBufferResponse.h  EventRegistry.h  EventRegistryEntry.h  GuiResourceRequest.cpp  GuiResourceResponse.cpp  GuiResourceResponse.h  NetworkMessageResponse.h  OpenInterfaceWindowRequest.cpp
client/gui/: CMakeLists.txt  FileNetworkReply.cpp  FileNetworkReply.h  GuiEntryPoint.cpp  GuiEntryPoint.h  IResourceHandler.h  InventoryGUI.cpp  InventoryGUI.h  LocalNetworkAccessManager.cpp  LocalNetworkAccessManager.h  MainReceiver.cpp  MainReceiver.h  NetworkAccessManager.cpp  NetworkAccessManager.h  NetworkReply.cpp  NetworkReply.h  QmlRenderer.cpp  QmlRenderer.h  QtService.cpp  QtService.h  QtServiceFactory.cpp  QtServiceFactory.h  QtServiceFsm.h  QtServiceFsmActions.h  QtServiceFsmEvents.h  QtServiceFsmGuards.h  QtServiceFsmStates.h  RepositoryNetworkReply.cpp  RepositoryNetworkReply.h  ThreadSafeDeclarativeView.cpp  ThreadSafeDeclarativeView.h  ViewLoadedListener.cpp  ViewLoadedListener.h
client/gui/qml/: CMakeLists.txt  main.qml  qmldir
client/gui/qml/content/: sub.qml
client/resourcerepository/: CMakeLists.txt  ConnectionListener.cpp  ConnectionListener.h  ResourceRepositoryFsm.h  ResourceRepositoryFsmActions.h  ResourceRepositoryFsmEvents.h  ResourceRepositoryFsmStates.h  ResourceRepositoryService.cpp  ResourceRepositoryService.h
common/: CMakeLists.txt  CommonApi.h  CommonConnection.cpp  CommonConnection.h  CommonConnectionListener.h  Message.h  MessageReceiver.h  MessageRegistry.cpp  MessageRegistry.h  MessageSerializer.cpp  MessageSerializer.h  QmlRequest.cpp  QmlRequest.h  SerializedMessage.cpp  SerializedMessage.h  Serializer.h  UnsupportedMessageReceived.h
common/messages/: CMakeLists.txt  Message.h  MessageReceiver.h  ResourceRequest.cpp  ResourceRequest.h  ResourceResponse.cpp  ResourceResponse.h  Serializer.h
messages/: CMakeLists.txt  Message.h  MessageReceiver.h  MessageSerializer.cpp  MessageSerializer.h  QmlRequest.cpp  QmlRequest.h  SerializedMessage.cpp  SerializedMessage.h  UnsupportedMessageReceived.h
qml/: CMakeLists.txt
qmlapplicationviewer/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  Connection.cpp  Connection.h  ResourceRequestHandler.cpp  ResourceRequestHandler.h  SimpleServer.cpp  SimpleServer.h  main.cpp
server/resources/qml/: main.qml
