project(qt-cmake)
set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 2.6.0)
set(CMAKE_BUILD_TYPE Debug)

if(CMAKE_COMPILER_IS_GNUCXX)
	add_definitions("-Wall")
	add_definitions("-Werror")
	add_definitions("-std=c++0x")
	add_definitions(-D__GXX_EXPERIMENTAL_CXX0X__=1)
endif(CMAKE_COMPILER_IS_GNUCXX)

add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(common)
