project(qt-cmake)
set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 2.6.0)
set(CMAKE_BUILD_TYPE Debug)

if(CMAKE_CXX_COMPILER MATCHES ".*clang")
	set(CMAKE_COMPILER_IS_CLANGXX 1)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
	add_definitions("-Wall")
	add_definitions("-Werror")
	add_definitions("-std=c++0x")
	add_definitions("-D__GXX_EXPERIMENTAL_CXX0X__")
endif(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
if(MSVC)
	add_definitions("-D_WIN32_WINNT=0x0501")
endif(MSVC)

add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(common)
